infra/k8s/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: claims
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internal
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS":443}]'
    alb.ingress.kubernetes.io/ssl-redirect: "443"
spec:
  rules:
    - host: claims.meridian-assurance.example
      http:
        paths:
          - path: /v1
            pathType: Prefix
            backend:
              service:
                name: claims-intake-api
                port:
                  name: http
          - path: /
            pathType: Prefix
            backend:
              service:
                name: claims-console
                port:
                  name: http
